--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,14 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.user.searchviewexpandablelistview.MainActivity">
-    <item
-        android:id="@+id/action_search"
-        android:orderInCategory="100"
-        android:title="@string/search"
-        android:icon="@mipmap/ic_launcher"
-        app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView" />
+    tools:context="com.example.bela.listanova.MainActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
