--- a/app/src/main/res/layout/item_receita.xml
+++ b/app/src/main/res/layout/item_receita.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/item_livro_nome"
+                android:id="@+id/item_receita_nome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
@@ -27,34 +27,27 @@
                 android:text="Oi" />
 
             <TextView
-                android:id="@+id/item_livro_autor"
+                android:id="@+id/item_receita_descricao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                android:layout_below="@+id/item_livro_nome"
+                android:layout_below="@+id/item_receita_nome"
                 android:text="TextView" />
 
             <TextView
-                android:id="@+id/item_livro_preco"
+                android:id="@+id/item_receita_ingredientes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/item_livro_autor"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/item_livro_descricao"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/item_livro_preco"
+                android:layout_below="@+id/item_receita_descricao"
                 android:text="TextView" />
 
             <ImageView
-                android:id="@+id/item_livro_imagem"
+                android:id="@+id/item_receita_imagem"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_margin="0dp"
-                android:layout_alignRight="@+id/item_livro_descricao"
+                android:layout_alignRight="@+id/item_receita_descricao"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="59dp"
