--- a/app/src/main/res/layout/item_receita.xml
+++ b/app/src/main/res/layout/item_receita.xml
@@ -52,7 +52,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="59dp"
                 android:layout_marginRight="59dp"
-                app:srcCompat="@drawable/estudo_vermelho_sherlock" />
+                app:srcCompat="@drawable/hamburguer" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
