--- a/app/src/main/res/layout/activity_lista.xml
+++ b/app/src/main/res/layout/activity_lista.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bela.es2017.firebase.db.ListaReceitasActivity">
+    tools:context="com.example.bela.es2017.firebase.db.searchActivity.ListaReceitasActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler1"
