--- a/app/src/main/res/layout/activity_adicionar_receita.xml
+++ b/app/src/main/res/layout/activity_adicionar_receita.xml
@@ -5,119 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.bela.es2017.Adicionar_receita">
+    
 
-
-
-    <TextView
-        android:id="@+id/textView6"
+    <Button
+        android:id="@+id/button_continuar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ingredientes"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="26dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="Continuar"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.027" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
-    <EditText
-        android:id="@+id/editText_ingrediente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:text=" "
+    <!-- Layout para o Fragment -->
+    <RelativeLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_continuar"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView6"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/textView6"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintHorizontal_bias="0.054"
-        android:textColorHint="@color/blue_grey_900" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Modo de preparo"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText_ingrediente"
-        android:layout_marginRight="108dp"
-        app:layout_constraintRight_toRightOf="@+id/editText_ingrediente"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_ingrediente" />
-
-    <EditText
-        android:id="@+id/editText_preparo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:text=" "
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView7"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/textView7"
-        app:layout_constraintHorizontal_bias="0.069"
-        />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tempo de preparo"
-        android:layout_marginTop="21dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText_preparo"
-        android:layout_marginRight="99dp"
-        app:layout_constraintRight_toRightOf="@+id/editText_preparo"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_preparo"
-        app:layout_constraintHorizontal_bias="1.0" />
-
-    <EditText
-        android:id="@+id/editText_tempo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="time"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView8"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/textView8"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        android:hint="1h30m" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dificuldade de preparo"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText_tempo"
-        android:layout_marginRight="157dp"
-        app:layout_constraintRight_toRightOf="@+id/editText_tempo"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_tempo"
-        app:layout_constraintHorizontal_bias="0.087" />
-
-    <EditText
-        android:id="@+id/editText_dificuldade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        android:layout_marginLeft="-29dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView9"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/textView9"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:hint="Insira um número de 1-10" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.0"></RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
