--- a/app/src/main/res/layout/fragment_adicionar_receitas2.xml
+++ b/app/src/main/res/layout/fragment_adicionar_receitas2.xml
@@ -5,72 +5,84 @@
     android:layout_height="match_parent"
     tools:context="com.example.bela.es2017.Fragment_adicionar_receita2">
 
-    <!-- TODO: Update blank fragment layout -->
-    <android.support.constraint.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView8"
-            android:layout_width="0dp"
+            android:id="@+id/textitem_passo2"
+            android:layout_width="match_parent"
             android:layout_height="24dp"
-            android:text="Tempo de preparo"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Passo 2. Adicione o modo de preparo:"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.027"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.039"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
-
-        <EditText
-            android:id="@+id/editText_tempo"
-            android:layout_width="165dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="time"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/textView8"
-            android:layout_marginTop="9dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            android:layout_marginRight="0dp"
-            app:layout_constraintRight_toRightOf="@+id/textView8"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:hint="1h30m" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Dificuldade de preparo"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginTop="19dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_tempo"
-            android:layout_marginRight="157dp"
-            app:layout_constraintRight_toRightOf="@+id/editText_tempo"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="@+id/editText_tempo"
-            app:layout_constraintHorizontal_bias="0.039" />
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:text="Modo de preparo"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.037"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="254dp" />
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp">
 
         <EditText
-            android:id="@+id/editText_dificuldade"
+            android:id="@+id/editText_preparo"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="11dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="9dp"
             android:ems="10"
-            android:hint="Insira um número de 1-10"
-            android:inputType="number"
-            app:layout_constraintHorizontal_bias="0.711"
-            app:layout_constraintLeft_toLeftOf="@+id/textView9"
-            app:layout_constraintRight_toRightOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            android:text=" "
+            app:layout_constraintHorizontal_bias="0.069" />
 
-    </android.support.constraint.ConstraintLayout>
+            <Button
+                android:id="@+id/item_adicionar_preparo"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Add"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/add_container_preparo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"></LinearLayout>
+
+    </LinearLayout>
 </FrameLayout>
