--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,14 @@
         <item name="android:textColor">@color/secondary_text</item>
     </style>
 
+    <style name="campos_cadastro">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/blue_grey_800</item>
+    </style>
+
+    <style name="campos_cadastro_preenchido">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/secondary_text</item>
+    </style>
 </resources>
