--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -106,6 +106,15 @@
             android:text="Leitor de Barras"
             tools:layout_editor_absoluteX="154dp"
             tools:layout_editor_absoluteY="354dp" />
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:text="Text to Speech"
+            tools:layout_editor_absoluteX="154dp"
+            tools:layout_editor_absoluteY="354dp" />
     </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
