--- a/app/src/main/res/layout/activity_leitor_de_barras.xml
+++ b/app/src/main/res/layout/activity_leitor_de_barras.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bela.es2017.LeitorDeBarras">
+    tools:context="com.example.bela.es2017.leitordebarras.LeitorDeBarras">
 
 </android.support.constraint.ConstraintLayout>
