--- a/app/src/main/res/layout/activity_adicionar_receita.xml
+++ b/app/src/main/res/layout/activity_adicionar_receita.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bela.es2017.Adicionar_receita">
+    tools:context="com.example.bela.es2017.Add_receita.Adicionar_receita">
     
 
     <Button
