--- a/app/src/main/res/layout/content_estoque.xml
+++ b/app/src/main/res/layout/content_estoque.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.bela.es2017.Estoque"
+    tools:context="com.example.bela.es2017.Estoque.Estoque"
     tools:showIn="@layout/activity_estoque"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     >
@@ -63,7 +63,7 @@
                     fab:fab_colorNormal="@color/accent"
                     fab:fab_colorPressed="@color/accent_dark"
                     fab:fab_plusIconColor="@color/white"
-                    fab:fab_icon="@drawable/googleg_color"
+                    fab:fab_icon="@drawable/codigodebarras"
                     fab:fab_size="mini"
                     fab:fab_title="Código de barras" />
 
@@ -74,7 +74,7 @@
                     fab:fab_colorNormal="@color/accent"
                     fab:fab_colorPressed="@color/accent_dark"
                     fab:fab_plusIconColor="@color/white"
-                    fab:fab_icon="@drawable/googleg_color"
+                    fab:fab_icon="@drawable/caixa_selecao_marcada"
                     fab:fab_size="mini"
                     fab:fab_title="Selecionar itens" />
 
