--- a/app/src/main/res/layout/fragment_adicionar_receitas2.xml
+++ b/app/src/main/res/layout/fragment_adicionar_receitas2.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bela.es2017.Fragment_adicionar_receita2">
+    tools:context="com.example.bela.es2017.Add_receita.Fragment_adicionar_receita2">
 
 
     <LinearLayout
