--- a/app/src/main/res/layout/fragment_adicionar_receita1.xml
+++ b/app/src/main/res/layout/fragment_adicionar_receita1.xml
@@ -50,26 +50,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
             android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/editText_ingrediente_original"
                 android:textAppearance="@style/campos_cadastro"
-                android:layout_width="100dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:textColor="@color/blue_grey_500"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/editText_quantidade_original"
                 app:layout_constraintTop_toTopOf="parent"
@@ -77,36 +73,35 @@
 
             <EditText
                 android:id="@+id/editText_quantidade_original"
-                android:textAppearance="@style/campos_cadastro"
-                android:layout_width="100dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/editText_ingrediente_original"
                 android:layout_alignBottom="@+id/editText_ingrediente_original"
                 android:layout_marginBottom="8dp"
-                android:layout_marginRight="24dp"
                 android:layout_marginTop="8dp"
                 android:layout_toEndOf="@+id/editText_ingrediente_original"
                 android:layout_toRightOf="@+id/editText_ingrediente_original"
                 android:ems="10"
                 android:inputType="number"
+                android:textAppearance="@style/campos_cadastro"
                 android:textColor="@color/blue_grey_500"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/editText_ingrediente_original"
                 app:layout_constraintRight_toLeftOf="@+id/spinner_unidade_original"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Spinner
                 android:id="@+id/spinner_unidade_original"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="8dp"
-                android:layout_marginRight="0dp"
-                android:layout_marginStart="14dp"
                 android:layout_marginTop="8dp"
                 android:layout_toEndOf="@+id/editText_quantidade_original"
                 android:layout_toRightOf="@+id/editText_quantidade_original"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/editText_quantidade_original"
                 app:layout_constraintRight_toLeftOf="@+id/item_adicionar_ingrediente"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
@@ -114,14 +109,16 @@
 
             <Button
                 android:id="@+id/item_adicionar_ingrediente"
-                android:layout_width="60dp"
-                android:layout_height="50dp"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Add"
+                android:textSize="10sp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
