--- a/app/src/main/res/layout/fragment_adicionar_receita3.xml
+++ b/app/src/main/res/layout/fragment_adicionar_receita3.xml
@@ -5,90 +5,147 @@
     android:layout_height="match_parent"
     tools:context=".Add_receita.Fragment_adicionar_receita3">
 
-    <android.support.constraint.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fadeScrollbars="false"
         >
 
-        <TextView
-            android:id="@+id/textitem_passo3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="Passo 3. Informações adicionais"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="0dp"
-            android:layout_height="24dp"
-            android:text="Tempo de preparo"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="19dp"
-            app:layout_constraintTop_toBottomOf="@+id/textitem_passo3" />
+            <TextView
+                android:id="@+id/textitem_passo3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Passo 3. Informações adicionais"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/editText_tempo"
-            android:layout_width="165dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="time"
-            app:layout_constraintLeft_toLeftOf="@+id/textView8"
-            android:layout_marginTop="9dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            app:layout_constraintRight_toRightOf="@+id/textView8"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:hint="1h30m" />
+            <TextView
+                android:id="@+id/frag3_textView_tempo"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="19dp"
+                android:text="Tempo de preparo"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textitem_passo3" />
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:text="Dificuldade de preparo"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_tempo"
-            android:layout_marginRight="157dp"
-            app:layout_constraintRight_toRightOf="@+id/editText_tempo"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="@+id/editText_tempo"
-            app:layout_constraintHorizontal_bias="0.039"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="157dp" />
+            <EditText
+                android:id="@+id/frag3_editText_tempo"
+                android:layout_width="165dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:ems="10"
+                android:hint="exemplo: 1h30m"
+                android:inputType="time"
+                app:layout_constraintHorizontal_bias="0.014"
+                app:layout_constraintLeft_toLeftOf="@+id/frag3_textView_tempo"
+                app:layout_constraintRight_toRightOf="@+id/frag3_textView_tempo"
+                app:layout_constraintTop_toBottomOf="@+id/frag3_textView_tempo" />
 
-        <EditText
-            android:id="@+id/editText_dificuldade"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="12dp"
-            android:ems="10"
-            android:hint="Insira um número de 1-10"
-            android:inputType="number"
-            app:layout_constraintHorizontal_bias="0.711"
-            app:layout_constraintLeft_toLeftOf="@+id/textView9"
-            app:layout_constraintRight_toRightOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            android:layout_marginStart="32dp" />
+            <TextView
+                android:id="@+id/frag3_textView_dificuldade"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginEnd="157dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="157dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="Dificuldade de preparo"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.039"
+                app:layout_constraintLeft_toLeftOf="@+id/frag3_editText_tempo"
+                app:layout_constraintRight_toRightOf="@+id/frag3_editText_tempo"
+                app:layout_constraintTop_toBottomOf="@+id/frag3_editText_tempo" />
 
-    </android.support.constraint.ConstraintLayout>
+            <EditText
+                android:id="@+id/frag3_editText_dificuldade"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="12dp"
+                android:ems="10"
+                android:hint="Insira um número de 1-10"
+                android:inputType="number"
+                app:layout_constraintHorizontal_bias="0.711"
+                app:layout_constraintLeft_toLeftOf="@+id/frag3_textView_dificuldade"
+                app:layout_constraintRight_toRightOf="@+id/frag3_textView_dificuldade"
+                app:layout_constraintTop_toBottomOf="@+id/frag3_textView_dificuldade" />
+
+            <TextView
+                android:id="@+id/frag3_textView_tags"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="20dp"
+                android:text="Tags"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/frag3_editText_dificuldade" />
+
+            <EditText
+                android:id="@+id/frag3_editText_tags"
+                android:layout_width="304dp"
+                android:layout_height="0dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:ems="10"
+                android:hint="Insira tags (uma por linha)"
+                android:inputType="textMultiLine"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/frag3_textView_tags" />
+            <TextView
+                android:id="@+id/frag3_textView10"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="20dp"
+                android:text="Porções (Opcional)"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/frag3_editText_tags"/>
+
+            <EditText
+                android:id="@+id/frag3_editText_porcoes"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:ems="10"
+                android:hint="Insira número de porções"
+                android:inputType="numberSigned"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/frag3_textView10" />
+
+
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
 </FrameLayout>
