--- a/app/src/main/res/layout/fragment_adicionar_receitas2.xml
+++ b/app/src/main/res/layout/fragment_adicionar_receitas2.xml
@@ -35,8 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginStart="4dp"
             android:text="Modo de preparo"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -49,32 +49,80 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:layout_margin="2dp"
+            android:layout_marginRight="2dp"
 
-        <EditText
-            android:id="@+id/editText_preparo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="9dp"
-            android:ems="10"
-            android:text=" "
-            app:layout_constraintHorizontal_bias="0.069" />
+            >
+
+            <EditText
+                android:id="@+id/editText_preparo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginRight="0dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/item_adicionar_preparo"
+                android:layout_gravity="left|center"
+                android:layout_toLeftOf="@+id/editText_addclock"
+                android:layout_toStartOf="@+id/editText_addclock"
+                android:ems="10"
+                android:text="aaaa" />
+
+            <EditText
+                android:id="@+id/editText_addclock"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+
+                android:layout_alignBaseline="@+id/ingr_clockcheckbox"
+                android:layout_alignBottom="@+id/ingr_clockcheckbox"
+                android:layout_gravity="center"
+                android:layout_toLeftOf="@+id/textView5"
+                android:layout_toStartOf="@+id/textView5"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="tempo(s)"
+                android:inputType="numberSigned"
+                android:textSize="14sp"
+
+                android:visibility="gone"
+                app:layout_constraintHorizontal_bias="0" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/item_adicionar_preparo"
+                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_toLeftOf="@+id/ingr_clockcheckbox"
+                android:layout_toStartOf="@+id/ingr_clockcheckbox"
+                android:gravity="center" />
+
+            <CheckBox
+                android:id="@+id/ingr_clockcheckbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/item_adicionar_preparo"
+                android:layout_alignBottom="@+id/item_adicionar_preparo"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@+id/item_adicionar_preparo"
+                android:layout_toStartOf="@+id/item_adicionar_preparo"
+                android:text="Clock"
+                android:textSize="10sp" />
 
             <Button
                 android:id="@+id/item_adicionar_preparo"
-                android:layout_width="60dp"
+                android:layout_width="45dp"
                 android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
+                android:layout_gravity="center"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Add"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
+                android:textSize="10sp"/>
 
         </RelativeLayout>
 
